--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,5 +1,12 @@
 <header>
     <div class="container-fluid p-3">
-        cabeçalho
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <img src="https://informa.life/wp-content/uploads/2019/10/Logo-Life-Informa-PNG-site20.png"
+                    alt="Life informa - Imóveis" sizes="" srcset="">
+            </div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 </header>
