--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class=" mt-5 py-5 " style="background-color: rgb(230, 222, 222);">
+<footer class=" mt-5 py-5 " style="background-color: #f5f5f5;">
     <div class="container">
         <h2 class="text-center mb-5">Imóveis Life</h2>
 
