--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -4,9 +4,18 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <img src="https://informa.life/wp-content/uploads/2019/10/Logo-Life-Informa-PNG-site20.png"
-                    alt="Life informa - Imóveis" sizes="" srcset="">
+                    alt="Life informa - Imóveis" sizes="" srcset="" class="_logo">
             </div>
             <div class="col-md-4"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid py-2 px-0">
+        <div class="_menu" style="background-color: #f5f5f5;">
+            <ul>
+                <li><a routerLink="">home</a></li>
+                <li><a routerLink="">imoveis</a></li>
+            </ul>
         </div>
     </div>
 </header>
