--- a/src/styles.css
+++ b/src/styles.css
@@ -43,3 +43,20 @@ a {
 ._carousel-detalhe-projeto .slick-slide {
     margin-right: 2px !important;
 }
+
+._desk {
+    display: block;
+}
+
+._mobile {
+    display: none;
+}
+
+@media only screen and (max-width: 800px) {
+    ._desk {
+        display: none;
+    }
+    ._mobile {
+        display: block;
+    }
+}
