--- a/src/app/component/carousel/carousel.component.html
+++ b/src/app/component/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="configSlide">
     <div ngxSlickItem *ngFor="let item of data">
-        <ng-container *ngIf="fancybox">
+        <ng-container *ngIf="fancybox==true">
             <a data-fancybox="gallery" href="{{item}}">
                 <img src="{{item}}" alt="{{title}}" title="{{title}}" class="img-fluid">
             </a>
