--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,8 +13,8 @@
     <div class="container-fluid py-2 px-0">
         <div class="_menu" style="background-color: #f5f5f5;">
             <ul>
-                <li><a routerLink="">home</a></li>
-                <li><a routerLink="">imoveis</a></li>
+                <li><a routerLink="/">home</a></li>
+                <li><a routerLink="imoveis">imóveis</a></li>
             </ul>
         </div>
     </div>
