--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -14,7 +14,8 @@
         <div class="_menu" style="background-color: #f5f5f5;">
             <ul>
                 <li><a routerLink="/">home</a></li>
-                <li><a routerLink="imoveis">imóveis</a></li>
+                <li><a routerLink="imoveis">Imóveis</a></li>
+                <li><a routerLink="imoveis">Salas Comerciais</a></li>
             </ul>
         </div>
     </div>
