--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,52 @@
-<p>home works!</p>
-<img src="assets/img/andar.svg" alt="">
+<div class="container py-5" style="height: 50vh;">
+    <div class="_filtro mb-5">
+        <h2 class="text-center">O que está procurando hoje?</h2>
+        <form action="">
+            <div class="input-group my-3">
+                <input type="search" class="form-control  _busca-rapida"
+                    placeholder="Salas Comerciais, Casas, Apartamentos, Terrenos...">
+                <button class="btn btn-outline-secondary">I</button>
+            </div>
+
+            <div class=" text-right d-flex mt-5 justify-content-center">
+                <div id="_avancada" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                    class="btn btn-outline-warning p-3">Busca avançada</div>
+            </div>
+        </form>
+    </div>
+
+
+</div>
+
+<div class="_buttons-home alert alert-info p-5 mb-5 d-flex flex-row justify-content-evenly text-center ">
+    <div class="btn _alugar">
+        Alugar
+    </div>
+    <div class="btn _vender">
+        Vender
+    </div>
+    <div class="btn _procurar">
+        Procurar
+    </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
