--- a/src/app/pages/imoveis/imoveis.component.html
+++ b/src/app/pages/imoveis/imoveis.component.html
@@ -12,14 +12,16 @@
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#flush-collapseOne" aria-expanded="false"
                                     aria-controls="flush-collapseOne">
-                                    Accordion Item #1
+                                    Garagem
                                 </button>
                             </h2>
                             <div id="flush-collapseOne" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the first item's
-                                    accordion body.</div>
+                                <div class="accordion-body">
+                                    1 <br>
+                                    2 <br>
+                                    3 <br>
+                                </div>
                             </div>
                         </div>
                         <div class="accordion-item">
@@ -27,14 +29,16 @@
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                     aria-controls="flush-collapseTwo">
-                                    Accordion Item #2
+                                    Quartos
                                 </button>
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the second item's
-                                    accordion body. Let's imagine this being filled with some actual content.</div>
+                                <div class="accordion-body">
+                                    1 <br>
+                                    2 <br>
+                                    3 <br>
+                                </div>
                             </div>
                         </div>
                         <div class="accordion-item">
@@ -68,9 +72,9 @@
                         <button (click)="changeViewList=1" class="_list">lista</button>
                     </p>
                 </div>
-                <ng-container *ngIf="imoveis.length > 0">
+                <ng-container *ngIf="imoveisService.imoveis.length > 0">
                     <div class="row row-cols-1 row-cols-lg-{{changeViewList}} " [class.list]="changeViewList==1">
-                        <ng-container *ngFor="let item of imoveis">
+                        <ng-container *ngFor="let item of imoveisService.imoveis">
                             <div class="col pb-3">
                                 <div class="card">
                                     <div class="card-header p-0">
@@ -109,6 +113,7 @@
                                                 </ng-container>
                                             </div>
                                         </div>
+                                        <p *ngIf="item?.endereco" class="_endereco">{{item.endereco}}</p>
 
                                     </div>
                                     <div class="card-footer pt-3">
