--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -16,6 +16,7 @@
                 <li><a routerLink="/">home</a></li>
                 <li><a routerLink="imoveis">Imóveis</a></li>
                 <li><a routerLink="imoveis">Salas Comerciais</a></li>
+                <li><a routerLink="imoveis">Quero anunciar</a></li>
             </ul>
         </div>
     </div>
