falta terminar filtro home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,19 +2,23 @@
     <div class="_filtro mb-5">
         <h2 class="text-center">O que está procurando hoje?</h2>
         <form action="">
-            <input type="search" class="form-control  _busca-rapida my-3"
-                placeholder="Salas Comerciais, Casas, Apartamentos, Terrenos...">
+            <input type="text" class="form-control  _busca-rapida my-3"
+                placeholder="Salas Comerciais, Casas, Apartamentos, Terrenos..." id="myInput" (keyup)="myFunction()">
             <!-- caso tenha preenchido o form a cima lista os anuncios aqui -->
 
             <ng-container *ngIf="imoveisService.imoveis.length > 0">
                 <div class="_list-imoveis mb-4">
-                    <div class="row row-cols-1 row-cols-lg-4">
+                    <ul class="row row-cols-1 row-cols-lg-4" id="myUL">
                         <ng-container *ngFor="let item of imoveisService.imoveis">
-                            <div class="col pb-3">
+                            <li class="col pb-3">
+                                <label>
+                                    <ng-container *ngFor="let cat of item.categoria">{{cat}} </ng-container>
+                                </label>
+
                                 <app-card-imovel [item]="item"></app-card-imovel>
-                            </div>
+                            </li>
                         </ng-container>
-                    </div>
+                    </ul>
                 </div>
             </ng-container>
 
