--- a/src/app/pages/imoveis/imoveis.component.css
+++ b/src/app/pages/imoveis/imoveis.component.css
@@ -39,6 +39,29 @@
     position: relative;
 }
 
+#myUL {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#myUL li {
+    position: relative;
+}
+
+#myUL label {
+    font-size: 12px;
+    border-radius: 20px;
+    background-color: #ccc;
+    opacity: .7;
+    line-height: 12px;
+    padding: 3px 10px;
+    position: absolute;
+    z-index: 10;
+    left: 30px;
+    top: 10px;
+}
+
 @media only screen and (max-width: 800px) {
     ._controls-list {
         display: none;
